--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,43 +1,14 @@
-.tic-tac-board{
-  text-align: center;
-  background-color: #efefef;
-  font-family: helvetica neue, sans-serif;
-  padding: 10px;
-  margin-top: 10px;
-  border-radius: 10px;
-  border:solid 4px #ccc;
-  &__row{
-    overflow: auto;
-  }
-  &__item{
-    background-color: #c1c1c1;
-    border-bottom:solid 5px #fff;
-    border-radius: 50%;
-    color:#fff;
-    text-shadow: 1px 1px 1px rgba(0,0,0,.5);
-    font-size: 20px;
-    text-indent: 5px;
-    width:50px;
-    line-height: 50px;
-    height: 50px;
-    text-align: center;
-    display:inline-block;
-    margin-bottom: 10px;
-    margin-right: 10px;
-    cursor: pointer;
+.video-group{
+
+  &__list{
+    clear:both;
   }
 }
-.input-field{
-  display: block;
-  padding:5px;
-  font-size:15px;
-  font-weight: bold;
-  &__text{
-    border-radius:4px;
-    border:solid 2px #ccc;
-    padding: 4px;
-    font-size: 15px;
-    margin-left: 10px;
-    color:#c2c2c2;
+.video{
+  display: inline-block;
+  list-style-type: none;
+  margin-left: 1em;
+  &__heading{
+    text-align: center;
   }
 }
